fixed battery frontedne visualisation and added missing backend logick